@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230805"
-#define public MagickPackageReleaseDate "snapshot-20230805"
+#define public MagickPackageVersionAddendum ".020230806"
+#define public MagickPackageReleaseDate "snapshot-20230806"
